--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name"> <font fgcolor='#95F856' size="19">  <!--Цвет и размер текста заголовка-->
-        СЧЕТЫ С АНИМАЦИЕЙ И ЗВУКОМ</font>
+    <string name="app_name">  <font fgcolor='#95F856' size="25">  <!--Цвет и размер текста заголовка-->
+        КАЛЬКУЛЯТОР</font>
+
+
     </string>
 
 </resources>
