--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">  <font fgcolor='#95F856' size="25">  <!--Цвет и размер текста заголовка-->
-        КАЛЬКУЛЯТОР</font>
-
+    <string name="app_name">  <font fgcolor='#95F856' size="22">  <!--Цвет и размер текста заголовка-->
+        КАЛЬКУЛЯТОР  ОТ  ВАДИМА</font>
 
     </string>
 
