--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="admob_app_id">
 ca-app-pub-3940256099942544~3347511713</string>
     <string name="admob_banner_id">
-ca-app-pub-3940256099942544/6300978111</string>
+ca-app-pub-3940256099942544~6300978111</string>
+
+    <string name="mytracker_app_key">66039511634340742311</string>
 
 </resources>
